--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spa Dog</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./src/css/main.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">FEATURES</a></li>
-          <li><a href="#">SERVICES</a></li>
-          <li><a href="#">PORTFOLIO</a></li>
-          <li><a href="#">PAGES</a></li>
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">SERVICES</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">PORTFOLIO</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="main">
       <section>
         <div>
           <h1>Make your dogs Look their best</h1>
@@ -122,7 +126,7 @@
         <button type="button">VIEW ALL SERVICES</button>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html">
         <img src="./src/img/logo.png" alt="Logo SpaDog" />
         Spa<span>Dog</span>
