workn in the main

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spa Dog</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./src/css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./src/css/main.css" />
   </head>
   <body>
     <header class="header">
@@ -22,13 +25,19 @@
       </nav>
     </header>
     <main class="main">
-      <section>
-        <div>
-          <h1>Make your dogs Look their best</h1>
-          <button type="button">FREE CONSULTATION</button>
+      <section class="hero">
+        <div class="hero-content">
+          <h1 class="hero-title">
+            Make your dogs <span class="hero-title-part">Look their best</span>
+          </h1>
+          <button class="hero-button" type="button">FREE CONSULTATION</button>
         </div>
-        <div>
-          <img src="./src/img/hero-dog.jpg" alt="black and white dog" />
+        <div class="hero-photo">
+          <img
+            class="hero-img"
+            src="./src/img/hero-dog.jpg"
+            alt="black and white dog"
+          />
         </div>
       </section>
       <section>
