--- a/index.html
+++ b/index.html
@@ -40,107 +40,132 @@
           />
         </div>
       </section>
-      <section>
-        <div>
-          <img src="./src/img/goldendog.png" alt="Golden Dog" />
+      <section class="about">
+        <div class="about-foto">
+          <img
+            class="about-img"
+            src="./src/img/goldendog.png"
+            alt="Golden Dog"
+          />
         </div>
-        <div>
-          <h2>A Few Words About Us</h2>
-          <p>
+        <div class="about-content">
+          <h2 class="about-title">A Few Words About Us</h2>
+          <p class="about-text">
             SpaDog is a pet salon established in 1999 with the main goal of
             giving your pets the full furry body treatment so that they can look
             their very best every day.
           </p>
-          <p>
+          <p class="about-text">
             Our salon offers a complete line of fine grooming services to bring
             out the best of appearance and personality in your pet Our groomers
             work carefully, never rush, and do not overbook appointments.
           </p>
-          <a href="#">LEARN MORE</a>
+          <a class="about-link" href="#">LEARN MORE</a>
         </div>
       </section>
-      <section>
-        <ul>
-          <li>
-            <h3>Qualified Employees</h3>
-            <p>
+      <section class="advantages">
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Qualified Employees</h3>
+            <p class="advantages-text">
               Our team consists of more than 20 qualified and experienced
               accountants, marketers, and managers.
             </p>
           </li>
-          <li>
-            <h3>Free Consultations</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Free Consultations</h3>
+            <p class="advantages-text">
               Our acquaintance with a client always begins with a free
               consultation to find out possible solutions to their problems.
             </p>
           </li>
-          <li>
-            <h3>100% Guaranteed</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 class="advantages-title">100% Guaranteed</h3>
+            <p class="advantages-text">
               All results that you get from us are 100% guaranteed to bring you
               to a whole new level of profitability and financial success.
             </p>
           </li>
-          <li>
-            <h3>100% Guaranteed</h3>
-            <p>
+          <li class="advantages-item">
+            <h3 v>100% Guaranteed</h3>
+            <p class="advantages-text">
               All results that you get from us are 100% guaranteed to bring you
               to a whole new level of profitability and financial success.
             </p>
           </li>
         </ul>
-        <div>
-          <img src="./src/img/black_dog.png" alt="Black dog" />
+        <div class="advantages-photo">
+          <img
+            class="advantages-img"
+            src="./src/img/black_dog.png"
+            alt="Black dog"
+          />
         </div>
       </section>
-      <section>
-        <hgroup>
-          <h2>Services</h2>
-          <p>
+      <section class="services">
+        <hgroup class="services-group">
+          <h2 class="services-title">Services</h2>
+          <p class="services-text">
             We offer a variety of grooming services for dogs of all breeds and
             ages. We use only high- quality products that suit the needs of your
             pet. Discover our most popular services below.
           </p>
         </hgroup>
-        <ul>
-          <li>
-            <div>
-              <img src="./src/img/services/styling.jpg" alt="Styling" />
-            </div>
-            <h3>Styling</h3>
-          </li>
-          <li>
-            <div>
-              <img src="./src/img/services/grooming.jpg" alt="Full Grooming" />
-            </div>
-            <h3>Full Grooming</h3>
-          </li>
-          <li>
-            <div>
+        <ul class="services-list">
+          <li class="services-item">
+            <div class="services-photo">
               <img
+                class="services-img"
+                src="./src/img/services/styling.jpg"
+                alt="Styling"
+              />
+            </div>
+            <h3 class="services-name">Styling</h3>
+          </li>
+          <li class="services-item">
+            <div class="services-photo">
+              <img
+                class="services-img"
+                src="./src/img/services/grooming.jpg"
+                alt="Full Grooming"
+              />
+            </div>
+            <h3 class="services-name">Full Grooming</h3>
+          </li>
+          <li class="services-item">
+            <div class="services-photo">
+              <img
+                class="services-img"
                 src="./src/img/services/bath-tydy.jpg"
                 alt="Bath & Tidy Up"
               />
             </div>
-            <h3>Bath & Tidy Up</h3>
+            <h3 class="services-name">Bath & Tidy Up</h3>
           </li>
-          <li>
-            <div>
-              <img src="./src/img/services/bath.jpg" alt="Deluxe Bath" />
+          <li class="services-item">
+            <div class="services-photo">
+              <img
+                class="services-img"
+                src="./src/img/services/bath.jpg"
+                alt="Deluxe Bath"
+              />
             </div>
-            <h3>Deluxe Bath</h3>
+            <h3 class="services-name">Deluxe Bath</h3>
           </li>
         </ul>
-        <button type="button">VIEW ALL SERVICES</button>
+        <button type="buttonon">VIEW ALL SERVICES</button>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">
-        <img src="./src/img/logo.png" alt="Logo SpaDog" />
-        Spa<span>Dog</span>
+      <a class="footer-logo" href="./index.html">
+        <img
+          class="footer-logo-img"
+          src="./src/img/logo.png"
+          alt="Logo SpaDog"
+        />
+        Spa<span class="footer-logo-part">Dog</span>
       </a>
-      <p>© 2023 All Rights Reserved. Privacy Policy</p>
+      <p class="footer-police">© 2023 All Rights Reserved. Privacy Policy</p>
     </footer>
   </body>
 </html>
