--- a/index.html
+++ b/index.html
@@ -22,32 +22,37 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">SERVICES</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">PORTFOLIO</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
-        </ul>
-      </nav>
+      <div class="conteiner">
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">SERVICES</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">PORTFOLIO</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">PAGES</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main">
-      <section class="hero">
-        <div class="hero-content">
-          <h1 class="hero-title">
-            Make your dogs <span class="hero-title-part">Look their best</span>
-          </h1>
-          <button class="hero-button" type="button">FREE CONSULTATION</button>
-        </div>
-        <div class="hero-photo">
-          <img
-            class="hero-img"
-            src="./src/img/hero-dog.jpg"
-            alt="black and white dog"
-          />
-        </div>
-      </section>
+      <div class="conteiner">
+        <section class="hero">
+          <div class="hero-content">
+            <h1 class="hero-title">
+              Make your dogs
+              <span class="hero-title-part">Look their best</span>
+            </h1>
+            <button class="hero-button" type="button">FREE CONSULTATION</button>
+          </div>
+          <div class="hero-photo">
+            <img
+              class="hero-img"
+              src="./src/img/hero-dog.jpg"
+              alt="black and white dog"
+            />
+          </div>
+        </section>
+      
       <section class="about">
         <div class="about-foto">
           <img
@@ -70,110 +75,118 @@
           </p>
           <a class="about-link" href="#">LEARN MORE</a>
         </div>
+      </div>
       </section>
+
       <section class="advantages">
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Qualified Employees</h3>
-            <p class="advantages-text">
-              Our team consists of more than 20 qualified and experienced
-              accountants, marketers, and managers.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Free Consultations</h3>
-            <p class="advantages-text">
-              Our acquaintance with a client always begins with a free
-              consultation to find out possible solutions to their problems.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">100% Guaranteed</h3>
-            <p class="advantages-text">
-              All results that you get from us are 100% guaranteed to bring you
-              to a whole new level of profitability and financial success.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 v>100% Guaranteed</h3>
-            <p class="advantages-text">
-              All results that you get from us are 100% guaranteed to bring you
-              to a whole new level of profitability and financial success.
-            </p>
-          </li>
-        </ul>
-        <div class="advantages-photo">
-          <img
-            class="advantages-img"
-            src="./src/img/black_dog.png"
-            alt="Black dog"
-          />
+        <div class="conteiner">
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Qualified Employees</h3>
+              <p class="advantages-text">
+                Our team consists of more than 20 qualified and experienced
+                accountants, marketers, and managers.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Free Consultations</h3>
+              <p class="advantages-text">
+                Our acquaintance with a client always begins with a free
+                consultation to find out possible solutions to their problems.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">100% Guaranteed</h3>
+              <p class="advantages-text">
+                All results that you get from us are 100% guaranteed to bring
+                you to a whole new level of profitability and financial success.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">100% Guaranteed</h3>
+              <p class="advantages-text">
+                All results that you get from us are 100% guaranteed to bring
+                you to a whole new level of profitability and financial success.
+              </p>
+            </li>
+          </ul>
+          <div class="advantages-photo">
+            <img
+              class="advantages-img"
+              src="./src/img/black_dog.png"
+              alt="Black dog"
+            />
+          </div>
         </div>
       </section>
       <section class="services">
-        <hgroup class="services-group">
-          <h2 class="services-title">Services</h2>
-          <p class="services-text">
-            We offer a variety of grooming services for dogs of all breeds and
-            ages. We use only high- quality products that suit the needs of your
-            pet. Discover our most popular services below.
-          </p>
-        </hgroup>
-        <ul class="services-list">
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="services-img"
-                src="./src/img/services/styling.jpg"
-                alt="Styling"
-              />
-            </div>
-            <h3 class="services-name">Styling</h3>
-          </li>
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="services-img"
-                src="./src/img/services/grooming.jpg"
-                alt="Full Grooming"
-              />
-            </div>
-            <h3 class="services-name">Full Grooming</h3>
-          </li>
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="services-img"
-                src="./src/img/services/bath-tydy.jpg"
-                alt="Bath & Tidy Up"
-              />
-            </div>
-            <h3 class="services-name">Bath & Tidy Up</h3>
-          </li>
-          <li class="services-item">
-            <div class="services-photo">
-              <img
-                class="services-img"
-                src="./src/img/services/bath.jpg"
-                alt="Deluxe Bath"
-              />
-            </div>
-            <h3 class="services-name">Deluxe Bath</h3>
-          </li>
-        </ul>
-        <button type="buttonon">VIEW ALL SERVICES</button>
+        <div class="conteiner">
+          <hgroup class="services-group">
+            <h2 class="services-title">Services</h2>
+            <p class="services-text">
+              We offer a variety of grooming services for dogs of all breeds and
+              ages. We use only high- quality products that suit the needs of
+              your pet. Discover our most popular services below.
+            </p>
+          </hgroup>
+          <ul class="services-list">
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="services-img"
+                  src="./src/img/services/styling.jpg"
+                  alt="Styling"
+                />
+              </div>
+              <h3 class="services-name">Styling</h3>
+            </li>
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="services-img"
+                  src="./src/img/services/grooming.jpg"
+                  alt="Full Grooming"
+                />
+              </div>
+              <h3 class="services-name">Full Grooming</h3>
+            </li>
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="services-img"
+                  src="./src/img/services/bath-tydy.jpg"
+                  alt="Bath & Tidy Up"
+                />
+              </div>
+              <h3 class="services-name">Bath & Tidy Up</h3>
+            </li>
+            <li class="services-item">
+              <div class="services-photo">
+                <img
+                  class="services-img"
+                  src="./src/img/services/bath.jpg"
+                  alt="Deluxe Bath"
+                />
+              </div>
+              <h3 class="services-name">Deluxe Bath</h3>
+            </li>
+          </ul>
+          <button type="buttonon">VIEW ALL SERVICES</button>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">
-        <img
-          class="footer-logo-img"
-          src="./src/img/logo.png"
-          alt="Logo SpaDog"
-        />
-        Spa<span class="footer-logo-part">Dog</span>
-      </a>
-      <p class="footer-police">© 2023 All Rights Reserved. Privacy Policy</p>
+      <div class="conteiner">
+        <a class="footer-logo" href="./index.html">
+          <img
+            class="footer-logo-img"
+            src="./src/img/logo.png"
+            alt="Logo SpaDog"
+          />
+          Spa<span class="footer-logo-part">Dog</span>
+        </a>
+        <p class="footer-police">© 2023 All Rights Reserved. Privacy Policy</p>
+      </div>
     </footer>
   </body>
 </html>
