--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </section>
 
       <section class="advantages">
-        <div class="conteiner">
+        <div class="container advantages-container">
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-title">Qualified Employees</h3>
@@ -121,7 +121,7 @@
         </div>
       </section>
       <section class="services">
-        <div class="conteiner">
+        <div class="container services-container">
           <hgroup class="services-group">
             <h2 class="services-title">Services</h2>
             <p class="services-text">
@@ -177,7 +177,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="conteiner">
+      <div class="container footer-container">
         <a class="footer-logo" href="./index.html">
           <img
             class="footer-logo-img"
